# mtg-commander-MCP

./: .gitignore  README.md  pyproject.toml
src/mtg_commander_mcp/: server.py  utils.py
src/mtg_commander_mcp/clients/: archidekt.py  edhrec.py  moxfield.py  rules.py  scryfall.py
